<resources>
    <string name="app_name">Sign_Master_V1</string>
    <string name="textview">TextView</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="dict_icon">dict_icon</string>
    <string name="dictionary">Dictionary</string>
    <string name="back_button">back_button</string>
    <string name="help_centre">help_centre</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="get_solution_from_our_inbox">Get solution from our inbox</string>
    <string name="start_a_conversation_now">Start a conversation now</string>
    <string name="find_intelligent_answers_instantly">Find intelligent answers instantly</string>
    <string name="help_center">Help Centre</string>
    <string name="tell_us_how_we_can_help">Tell us how we can help</string>
    <string name="helpimage">helpImage</string>
    <string name="chatimg">chatImg</string>
    <string name="faqimg">faqImg</string>
    <string name="emailimg">emailImg</string>
    <string name="f_a_q">F A Q</string>
    <string name="todo" />
    <string name="help_img" />
    <string name="chat_img" />
    <string name="faqimage" />
    <string name="it_is_a_fully_free_mobile_app_and_usable_by_anyone">It is a fully free mobile app and usable by anyone.</string>
    <string name="our_application_has_mainly_four_features_they_are_open_camera_upload_image_sign_dictionary_and_help_page_which_helps_the_users_to_contact_via_whatsapp_and_gmail">Our application has mainly four features They are open camera , upload image , sign dictionary and help page which helps the users to contact via whatsapp and gmail.</string>
    <string name="is_it_paid_or_open_source">Is it paid or open source?</string>
    <string name="what_are_the_options_available_in_the_sign_master_application">What are the options available in the sign master application?</string>
    <string name="f_a_qs">F A Qs</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="verbs">Verbs</string>
    <string name="greetings">Greetings</string>
    <string name="let_s_get_start">Let\'s Get Start</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="logo">logo</string>
    <string name="sign_master">Sign Master</string>
    <string name="welcomeImage">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="let_s_start_sign_language">Let\'s start Sign Language</string>
    <string name="hi">Hi !</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
</resources>