<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="800dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="241dp">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FaqActivity">

        <View
            android:id="@+id/view_u"
            android:layout_width="411dp"
            android:layout_height="240dp"
            android:background="@drawable/shape_1"
            android:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/faq_topic"
            android:layout_width="195dp"
            android:layout_height="38dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:text="@string/f_a_qs"
            android:textAlignment="center"
            android:textColor="#0D47A1"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_u"
            app:layout_constraintVertical_bias="0.119" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/faqimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_u"
            app:layout_constraintVertical_bias="0.011"
            app:srcCompat="@drawable/faqs" />

        <TextView
            android:id="@+id/camera_output"
            android:layout_width="382dp"
            android:layout_height="54dp"
            android:layout_marginBottom="408dp"
            android:background="@drawable/radius"
            android:padding="5dp"
            android:text="@string/what_are_the_options_available_in_the_sign_master_application"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="385dp"
            android:layout_height="91dp"
            android:layout_marginBottom="304dp"
            android:background="@drawable/rectangle_shape"
            android:text="@string/our_application_has_mainly_four_features_they_are_open_camera_upload_image_sign_dictionary_and_help_page_which_helps_the_users_to_contact_via_whatsapp_and_gmail"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="382dp"
            android:layout_height="54dp"
            android:background="@drawable/radius"
            android:text="@string/is_it_paid_or_open_source"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.693"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="382dp"
            android:layout_height="54dp"
            android:background="@drawable/rectangle_shape"
            android:text="@string/it_is_a_fully_free_mobile_app_and_usable_by_anyone"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.785"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="145dp"
            android:layout_height="51dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361"
            app:srcCompat="@drawable/qa" />

   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>